--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "body-parser": "^2.2.2",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "framer-motion": "^12.29.2",
+    "lucide-react": "^0.563.0",
+    "mysql2": "^3.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.20.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
