--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "axios": "^1.13.2",
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "framer-motion": "^12.29.2",
+    "kafkajs": "^2.2.4",
     "lucide-react": "^0.563.0",
     "mysql2": "^3.16.2",
     "react": "^18.2.0",
